fix: replace Map with Collections.singletonMap for event metadata and refactor UserCustomEvent to a class